2007-08-19  Pawel Salek

	* libinit_balsa/balsa-druid-page-{welcome,defclient,directory}.[hc]:
	* libinit_balsa/balsa-druid-page-{user,finish}.[hc]:
	* libinit_balsa/init_balsa.c: replace GnomeDruid with GtkAssistant.
	* libinit_balsa/{balsa-initdruid,helper}.{c,h}: ditto.

2007-08-10  Pawel Salek

	* libbalsa/mailbox_imap.c: encode cache file names more robustly.
	* libbalsa/imap/imap-search.c: disable UID ESEARCH for now since
	some interpretations make it useless.

2007-08-08  Pawel Salek

	* src/mailbox-conf.h: needs server.h
	* src/{save-restore,balsa-app}.c: ditto.
	* libinit_balsa/balsa-druid-page-{directory,user}.c: ditto.
	* libbalsa/send.c: do not disclose auth data. (PB)
	* libbalsa/imap-server.c: ditto.
	* libbalsa/{smtp-,}server.c: needs server.h
	* libbalsa/mailbox_imap.c: rework persistent caching.
	* libbalsa/libbalsa.c: disable IMAP timeouts for now - there is
	some deadlock condition.
	* libbalsa/mailbox_pop3.c: needs server.h
	* libbalsa/imap/imap-handle.c: serialize ImapBody, too.
	* libbalsa/imap/imap-commands.[ch]: imap_mbox_handle_fetch_rfc822()
	can fetch many messages at once now.
	
2007-08-06  Albrecht Dreß

	* libbalsa/mime.c: reflow improvements.
	* src/balsa-mime-widget-callbacks.c: programs require uris, not
	filenames.

2007-07-18  Albrecht Dreß

	* configure.in: safe gpg2 version detection.
	* src/main.c: ditto; initialize threads before using any glib
	functions (pb).

2007-07-15  Albrecht Dreß

	* src/balsa-print-object.c: (cairo_print_pixbuf): print icon
	colors correctly regardless of endianness.

2007-07-04  Pawel Salek

	* NEWS, configure.in: release 2.3.17.

2007-07-01  Pawel Salek

	* libbalsa/imap/pop3.c: validate APOP server stamp.
	* libbalsa/imap/imap-search.c: split long SEARCH commands into
	several ones.
	* libbalsa/mailbox_imap.c: return correct bool code on flag store.

2007-06-21  Peter Bloomfield

	* src/main-window.c: (display_new_mail_notification): respect
	balsa_app.notify_new_mail_dialog.